--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,7 @@
   <link rel="preload" href="main.dart.js" as="script">
   
   <script>
-    var serviceWorkerVersion = null;
+    var serviceWorkerVersion = "{{flutter_service_worker_version}}";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
