--- a/web/index.html
+++ b/web/index.html
@@ -47,9 +47,9 @@
   
   <!-- Icons -->
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="shortcut icon" href="favicon.ico">
   
   <title>NossoDinDin - Finanças Pessoais</title>
   <link rel="manifest" href="manifest.json">
